--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,8 +3,6 @@
     {
         "**/.DS_Store":true,
         "**/.git":true,
-        "**/.gitignore":true,
-        "**/.gitmodules":true,
         "**/*.booproj":true,
         "**/*.pidb":true,
         "**/*.suo":true,
@@ -56,5 +54,6 @@
         "**/Library": true,
         "**/ProjectSettings": true,
         "**/Temp": true
-    }
+    },
+    "git.ignoreLimitWarning": true
 }
